--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,13 +17,8 @@ html
       link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href='/favicons/favicon-' + favsize + 'x' + favsize + '.png')
     link(rel='manifest', href='/manifest.json')
 
-    // CSS
-    link(type='text/css', rel='stylesheet', href='/css/libs.css')
-    link(type='text/css', rel='stylesheet', href='/css/app.css')
-
-    // JS
-    script(type='text/javascript', src='/js/libs.js')
-    script(type='text/javascript', src='/js/app.js')
+    // JS / CSS
+    script(type='text/javascript', src='/js/bundle.min.js')
 
     block head
 
