Added support for 4 logging services

--- a/views/configure/index.pug
+++ b/views/configure/index.pug
@@ -10,7 +10,7 @@ html(data-logic='configure')
       link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href='/favicons/favicon-' + favsize + 'x' + favsize + '.png')
 
     // JS / CSS
-    script(type='text/javascript', src='/js/bundle.min.js')
+    script(type='text/javascript', src='/js/configure.min.js')
 
     block head
 
