--- a/views/error-notexist.pug
+++ b/views/error-notexist.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(data-logic='error')
   head
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(charset='UTF-8')
@@ -17,9 +17,8 @@ html
       link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href='/favicons/favicon-' + favsize + 'x' + favsize + '.png')
     link(rel='manifest', href='/manifest.json')
 
-    // CSS
-    link(type='text/css', rel='stylesheet', href='/css/libs.css')
-    link(type='text/css', rel='stylesheet', href='/css/error.css')
+    // JS / CSS
+    script(type='text/javascript', src='/js/bundle.min.js')
 
   body(class='is-notexist')
     .container
