Loading screen on editor / source init state

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -34,5 +34,6 @@ $primary: 'indigo';
 @import 'components/_editor';
 
 @import 'layout/_header';
+@import 'layout/_loader';
 
 @import 'pages/_welcome';
