--- a/views/pages/create.pug
+++ b/views/pages/create.pug
@@ -25,3 +25,8 @@ block content
   include ../modals/editor-file.pug
   include ../modals/editor-video.pug
   include ../modals/editor-codeblock.pug
+
+block outside
+  #page-loader
+    i
+    span Loading editor...
