--- a/views/pages/source.pug
+++ b/views/pages/source.pug
@@ -29,3 +29,8 @@ block content
 
   include ../modals/create.pug
   include ../modals/move.pug
+
+block outside
+  #page-loader
+    i
+    span Loading source...
