--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -28,7 +28,7 @@ $primary: 'indigo';
 
 @import 'libs/twemoji-awesome';
 @import 'libs/jquery-contextmenu';
-@import 'node_modules/highlight.js/styles/tomorrow';
+@import 'node_modules/highlight.js/styles/atom-one-dark';
 @import 'node_modules/simplemde/dist/simplemde.min';
 
 @import 'components/_editor';
