--- a/client/scss/configure.scss
+++ b/client/scss/configure.scss
@@ -1,15 +1,24 @@
+@charset "utf-8";
 
 $primary: 'indigo';
 
-@import 'core-client/scss/core';
-@import 'core-client/scss/components/button';
-@import 'core-client/scss/components/footer';
-@import 'core-client/scss/components/form';
-@import 'core-client/scss/components/grid';
-@import 'core-client/scss/components/modal';
-@import 'core-client/scss/components/nav';
-@import 'core-client/scss/components/panel';
-@import 'core-client/scss/components/typography';
+@import "base/variables";
+@import "base/colors";
+@import "base/reset";
+@import "base/mixins";
+@import "base/fonts";
+@import "base/base";
+
+@import "libs/animate";
+
+@import 'components/button';
+@import 'components/footer';
+@import 'components/form';
+@import 'components/grid';
+@import 'components/modal';
+@import 'components/nav';
+@import 'components/panel';
+@import 'components/typography';
 
 .welcome {
 	text-align: center;
