--- a/client/scss/error.scss
+++ b/client/scss/error.scss
@@ -1,9 +1,18 @@
+@charset "utf-8";
 
 $primary: 'indigo';
 
-@import 'core-client/scss/core';
-@import 'core-client/scss/components/button';
-@import 'core-client/scss/components/grid';
-@import 'core-client/scss/components/typography';
+@import "base/variables";
+@import "base/colors";
+@import "base/reset";
+@import "base/mixins";
+@import "base/fonts";
+@import "base/base";
 
-@import 'core-client/scss/pages/error';
+@import "libs/animate";
+
+@import 'components/button';
+@import 'components/grid';
+@import 'components/typography';
+
+@import 'pages/error';
