--- a/client/scss/login.scss
+++ b/client/scss/login.scss
@@ -1,2 +1,13 @@
-@import 'core-client/scss/core';
-@import 'core-client/scss/pages/login';
+@charset "utf-8";
+
+$primary: 'indigo';
+
+@import "base/variables";
+@import "base/colors";
+@import "base/reset";
+@import "base/mixins";
+@import "base/fonts";
+@import "base/base";
+
+@import "libs/animate";
+@import 'pages/login';
