--- a/views/configure/index.pug
+++ b/views/configure/index.pug
@@ -367,7 +367,7 @@ html(data-logic='configure')
                   i
                 .panel-content.is-text
                   p #[i.icon-loader.animated.rotateIn.infinite] Restarting Wiki.js in normal mode...
-                  p You'll automatically be redirected to the homepage when ready. Please be patient...
+                  p You'll automatically be redirected to the homepage when ready. This usually takes about 30 seconds.
                 .panel-footer
                   button.button.is-green(disabled='disabled') Start
 
