--- a/views/pages/view.pug
+++ b/views/pages/view.pug
@@ -29,7 +29,7 @@ block rootNavRight
 block content
 
   #page-type-view(data-entrypath=pageData.meta.path)
-    .container.is-fluid
+    .container.is-fluid.has-mkcontent
       .columns.is-gapless
 
         .column.is-narrow.is-hidden-touch.sidebar
