All Pages - columns system UI

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -13,6 +13,7 @@ $primary: 'indigo';
 
 @import 'components/alert';
 @import 'components/button';
+@import 'components/collapsable-nav';
 @import 'components/footer';
 @import 'components/form';
 @import 'components/grid';
