--- a/views/pages/view.pug
+++ b/views/pages/view.pug
@@ -42,6 +42,10 @@ block content
                 a(href='/')
                   i.icon-home
                   span Home
+              li
+                a(href='/all')
+                  i.icon-paper
+                  span All Pages
               if pageData.parent
                 li
                   a(href='/' + pageData.parent.path)
