Added CJK support + MathJax display

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,6 +18,8 @@ html
     link(rel='manifest', href='/manifest.json')
 
     // JS / CSS
+    script(type='text/javascript').
+      window.MathJax = { root:"/js/mathjax" }
     script(type='text/javascript', src='/js/bundle.min.js')
 
     block head
