Work on All Pages section

--- a/views/pages/all.pug
+++ b/views/pages/all.pug
@@ -26,87 +26,8 @@ block content
                 a(href='/login')
                   i.icon-unlock
                   span Login
-      ul.collapsable-nav.has-children
-        li: a
-          i.icon-file
-          span Page 1
-        li: a
-          i.icon-file
-          span Page 2
-        li: a
-          i.icon-file
-          span Page 3
-        li.is-active: a
-          i.icon-folder2
-          span Page 4
-        li: a
-          i.icon-file
-          span Page 5
-      ul.collapsable-nav.has-children
-        li.is-title page-4
-        li: a
-          i.icon-file
-          span Page 1
-        li.is-active: a
-          i.icon-file
-          span Page 2
-        li: a
-          i.icon-file
-          span Page 3
-        li: a
-          i.icon-file
-          span Page 4
-        li: a
-          i.icon-file
-          span Page 5
-      ul.collapsable-nav.has-children
-        li.is-title page-4
-        li: a
-          i.icon-file
-          span Page 1
-        li.is-active: a
-          i.icon-file
-          span Page 2
-        li: a
-          i.icon-file
-          span Page 3
-        li: a
-          i.icon-file
-          span Page 4
-        li: a
-          i.icon-file
-          span Page 5
-      ul.collapsable-nav.has-children
-        li.is-title page-4
-        li: a
-          i.icon-file
-          span Page 1
-        li.is-active: a
-          i.icon-file
-          span Page 2
-        li: a
-          i.icon-file
-          span Page 3
-        li: a
-          i.icon-file
-          span Page 4
-        li: a
-          i.icon-file
-          span Page 5
-      ul.collapsable-nav
-        li.is-title Sub-Pages
-        li: a
-          i.icon-file
-          span Page 1
-        li: a
-          i.icon-file
-          span Page 2
-        li: a
-          i.icon-file
-          span Page 3
-        li: a
-          i.icon-file
-          span Page 4
-        li: a
-          i.icon-file
-          span Page 5
+      ul.collapsable-nav(v-for='treeItem in tree', :class='{ "has-children": treeItem.hasChildren }', v-cloak)
+        li(v-for='page in treeItem.pages', :class='{ "is-active": page.isActive }')
+          a(v-on:click='fetch(page._id)')
+            i(:class='{ "icon-folder2": page.isFolder, "icon-file": !page.isFolder }')
+            span {{ page.title }}
