--- a/client/scss/configure.scss
+++ b/client/scss/configure.scss
@@ -22,12 +22,8 @@ $primary: 'indigo';
 
 .welcome {
 	text-align: center;
-	padding: 25px 0 0;
+	padding: 50px 0 15px 0;
 	color: mc('grey', '700');
-
-	h1 {
-		margin-top: 5px;
-	}
 
 	h2 {
 		margin: 0;
