--- a/client/scss/components/sidebar.scss
+++ b/client/scss/components/sidebar.scss
@@ -4,7 +4,7 @@
 	color: mc('blue-grey', '50');
 	width: 250px;
 	max-width: 250px;
-	min-height: 80vh;
+	min-height: calc(100vh - 120px);
 
 	aside {
     padding: 1px 0 15px 0;
