--- a/views/pages/view.pug
+++ b/views/pages/view.pug
@@ -28,7 +28,7 @@ block rootNavRight
 
 block content
 
-  #page-type-view(data-entrypath=pageData.meta.path)
+  #page-type-view.page-type-container(data-entrypath=pageData.meta.path)
     .container.is-fluid.has-mkcontent
       .columns.is-gapless
 
